--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,19 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  integrity="sha384-B4gt1l1d6YPGJ0y/OnGnZ13Dygq7lNpm4pY3z4L82zGdsV98r83B74gQnqOIfFf7"
+  crossorigin="anonymous"
+/>
 </head>
 <body>
+  <script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjU5v7I1SrvPTvO"
+  crossorigin="anonymous"
+></script>
   <app-root></app-root>
 </body>
 </html>
